# LeArm-software-cross-platform

./: LICENSE  README.md  main.rs
LeArm-CPR/: Cargo.toml  Dioxus.toml
LeArm-CPR/src/: app.rs
LeArm-CPR/src-tauri/: Cargo.toml  tauri.conf.json
LeArm-CPR/src-tauri/src/: lib.rs  main.rs
learm_cli/: Cargo.toml
learm_cli/src/: main.rs
learm_cp/: Cargo.toml  Dioxus.toml
learm_cp/assets/: main.css
learm_cp/learm_cli/: Cargo.toml
learm_cp/src/: main.rs
learm_gui/: Cargo.toml  Dioxus.toml
learm_gui/assets/: main.css
learm_gui/src/: main.rs
